Fix stupid breaks in code

--- a/Drum-Kit/style.css
+++ b/Drum-Kit/style.css
@@ -1,8 +1,6 @@
 html {
   font-size: 10px;
-  background: url(
-    "https://rockstarcreativestudio.github.io/Javascript30/Drum-Kit/images/aditya-chinchure-494048-unsplash.jpg"
-  ) center;
+  background: url("../images/aditya-chinchure-494048-unsplash.jpg") center;
   background-size: cover;
 }
 
